--- a/Dashbord.html
+++ b/Dashbord.html
@@ -21,18 +21,20 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-custom navbar-mainbg">
-        <a class="navbar-brand navbar-logo" href="#">TodoApp</a>
-        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-bars text-white"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <div class="hori-selector">
-                    <div class="left"></div>
-                    <div class="right"></div>
-                </div>
+    <nav>
+
+        <div id="hamburger">
+            <div id="bar1"></div>
+            <div id="bar2"></div>
+            <div id="bar3"></div>
+        </div>
+
+
+        <div class="navMenu">
+            <ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html"><b>TodoApp</b></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Dashbord.html">Dashboard</a>
                 </li>
@@ -146,6 +148,12 @@
 
 
 
-</body>
-
-</html>
+                <script src="index.js"></script>
+                <script src="navbar.js"></script>
+            
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+                    crossorigin="anonymous"></script>
+            </body>
+            
+            </html>
